[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/upgrade_selection/UpgradeSelectionScreen.gd" id="1_upgrade"]

[node name="UpgradeSelectionScreen" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_upgrade")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "LEVEL UP!"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBox/Header"]
layout_mode = 2
text = "SKIP"

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose an Upgrade"
horizontal_alignment = 1

[node name="UpgradeCards" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1